tests/kyverno-policies/pod-user-validation/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pod-user-validation
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: pod-user-validation
    rule: pods-require-valid-uid
    resources:
      - test/pods-require-valid-uid-skip
    kind: Pod
    result: skip
  - policy: pod-user-validation
    rule: pods-require-valid-uid
    resources:
      - user-test/pods-require-valid-uid-pass
      - user-test/pods-require-valid-uid-container-pass
      - user-test/pods-require-valid-uid-init-pass
    kind: Pod
    result: pass
  - policy: pod-user-validation
    rule: pods-require-valid-uid
    resources:
      - user-test/pods-require-valid-uid-fail
      - user-test/pods-require-valid-uid-container-fail
      - user-test/pods-require-valid-uid-init-fail
    kind: Pod
    result: fail
  - policy: pod-user-validation
    rule: pods-require-valid-gid
    resources:
      - test/pods-require-valid-gid-skip
    kind: Pod
    result: skip
  - policy: pod-user-validation
    rule: pods-require-valid-gid
    resources:
      - user-test/pods-require-valid-gid-pass
      - user-test/pods-require-valid-gid-container-pass
      - user-test/pods-require-valid-gid-init-pass
    kind: Pod
    result: pass
  - policy: pod-user-validation
    rule: pods-require-valid-gid
    resources:
      - user-test/pods-require-valid-gid-fail
      - user-test/pods-require-valid-gid-container-fail
      - user-test/pods-require-valid-gid-init-fail
    kind: Pod
    result: fail
  - policy: pod-user-validation
    rule: fsgroup-require-valid-gid
    resources:
      - test/fsgroup-require-valid-gid-skip
    kind: Pod
    result: skip
  - policy: pod-user-validation
    rule: fsgroup-require-valid-gid
    resources:
      - user-test/fsgroup-require-valid-gid-pass
    kind: Pod
    result: pass
  - policy: pod-user-validation
    rule: fsgroup-require-valid-gid
    resources:
      - user-test/fsgroup-require-valid-gid-fail
    kind: Pod
    result: fail
