tests/kyverno-policies/pod-user-validation/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
policies:
  - name: pod-user-validation
    rules:
      - name: pods-require-valid-uid
        values:
          uidMap.data.user-test: '1000'
      - name: pods-require-valid-gid
        values:
          gidMap.data.user-test: '1001'
      - name: fsgroup-require-valid-gid
        values:
          gidMap.data.user-test: '1001'
